--- a/templates/import_form.html
+++ b/templates/import_form.html
@@ -108,7 +108,9 @@
                 </div>
                 
                 <div class="form-text mt-3">提示：导入文件数量较多时，速度会比较慢，请耐心等待。</div>
-                <button type="submit" class="btn btn-primary custom-btn w-100 mt-3">开始导入</button> 
+                <button type="submit" id="startImportBtn" class="btn btn-primary custom-btn w-100 mt-3">
+                    <i class="bi bi-cloud-arrow-up"></i>开始导入
+                </button> 
             </form>
 
             <div id="resultArea" class="mt-4" style="display: none;">
