--- a/templates/link_form.html
+++ b/templates/link_form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>123云盘无限制分享工具 - 从分享链接导出 - GitHub@realcwj</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
@@ -54,7 +55,9 @@
                     <div class="form-text">勾选后，您本次分享的资源将提交审核，通过后会对所有用户公开可见。</div>
                     <div class="form-text">勾选本项将强制勾选“生成短分享码”，并且要求填写“根目录名 (分享名)”。</div>
                 </div>
-                <button type="submit" class="btn btn-primary custom-btn w-100">从链接导出</button>
+                <button type="submit" id="startLinkExportBtn" class="btn btn-primary custom-btn w-100">
+                    <i class="bi bi-cloud-arrow-down"></i>开始导出
+                </button>
             </form>
 
             <div id="resultArea" class="mt-4" style="display: none;">
@@ -73,27 +76,15 @@
                     <textarea id="shareCodeOutput" class="form-control" rows="3" readonly></textarea>
                 </div>
 
-                <div id="actionButtonsArea" class="mt-3" style="display: none;">
-                    <button id="copyShortShareCodeBtn" type="button" class="btn btn-secondary custom-btn d-block w-100 mb-2" style="display: none;">
-                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-check me-1" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-                            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A1.5 1.5 0 0 1 9.5 2h-3A1.5 1.5 0 0 1 5 3.5v-2A1.5 1.5 0 0 0 3.5 0H4v1.5zM5 3.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1z"/>
-                        </svg>
-                        复制短分享码
+                <div id="actionButtonsArea" class="mt-3 action-button-row" style="display: none;">
+                    <button id="copyShortShareCodeBtn" type="button" class="btn btn-info custom-btn" style="display: none;">
+                        <i class="bi bi-clipboard"></i>复制短码
                     </button>
-                    <button id="copyShareCodeBtn" type="button" class="btn btn-secondary custom-btn d-block w-100 mb-2" style="display: none;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard me-1" viewBox="0 0 16 16">
-                            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
-                            <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
-                        </svg>
-                        复制长分享码
+                    <button id="copyShareCodeBtn" type="button" class="btn btn-secondary custom-btn" style="display: none;">
+                        <i class="bi bi-clipboard"></i>复制长码
                     </button>
-                    <button id="downloadShareCodeBtn" class="btn btn-primary custom-btn d-block w-100 mb-2" style="display: none;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download me-2" viewBox="0 0 16 16">
-                          <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
-                          <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
-                        </svg>
-                        下载分享文件 (.123share)
+                    <button id="downloadShareCodeBtn" class="btn btn-primary custom-btn" style="display: none;">
+                        <i class="bi bi-file-earmark-arrow-down"></i>下载文件
                     </button>
                 </div>
             </div>
