--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,8 @@
                 </a>
                 <a href="{{ url_for('transform_page') }}" class="btn btn-primary custom-btn"> <i class="bi bi-arrow-repeat me-2"></i>123FastLink格式互转
                 </a>
+                <a href="https://ghfast.top/https://raw.githubusercontent.com/realcwj/123Pan-Unlimited-Share/refs/heads/main/Tampermonkey.js" class="btn btn-primary custom-btn"> <i class="bi bi-file-binary"></i>下载油猴脚本
+                </a>
             </div>
         </div>
     </div>
