--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                 </a>
                 <a href="{{ url_for('transform_page') }}" class="btn btn-primary custom-btn"> <i class="bi bi-arrow-repeat me-2"></i>123FastLink格式互转
                 </a>
-                <a href="https://ghfast.top/https://raw.githubusercontent.com/realcwj/123Pan-Unlimited-Share/refs/heads/main/Tampermonkey.js" class="btn btn-primary custom-btn"> <i class="bi bi-file-binary"></i>下载油猴脚本
+                <a href="https://greasyfork.org/zh-CN/scripts/537874-123%E4%BA%91%E7%9B%98%E7%A7%92%E4%BC%A0%E9%93%BE%E6%8E%A5-with-123pan-unlimited-share" class="btn btn-primary custom-btn"> <i class="bi bi-file-binary"></i>下载油猴脚本
                 </a>
             </div>
         </div>
